[tool.poetry]
name = "asp-chef-cli"
version = "0.5.0"
description = "A simple CLI to run ASP Chef recipes"
authors = ["Mario Alviano <mario.alviano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
pytest-playwright = "^0.7.2"
dumbo-asp = "^0.4.0"
uvicorn = "^0.40.0"
fastapi = "^0.129.0"
opa-python = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
coverage = "^7.8.0"
pytest = "^9.0.2"

[tool.poetry.scripts]
asp-chef-cli = "asp_chef_cli.cli:run_app"
